# YouTube_to_m3u

./: README.md  setup.cfg  youtube.m3u
.github/workflows/: style-check.yml  update.yml
y2m/: main.py  ytlive2m3u.py
