[metadata]
name = y2m
version = attr: y2m.__init__.__version__
description = Grab m3u from YouTube live
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = benmoose39
author_email = unnik1998@gmail.com
maintainer = eggplants
maintainer_email = w10776e8w@yahoo.co.jp
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >= 3.5

[options.entry_points]
console_scripts =
    y2mconv = y2m.y2mconv:main
    y2mlink = y2m.y2mlink:main

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
